# alelysee

./: .ecr_vars  .env.local.example  .gitignore  AWS_DEPLOYMENT.md  AWS_RUNBOOK.md  Cargo.toml  Dockerfile  Dockerfile.railway  Makefile  README.md  docker-compose.yml  dockerhub-task.json  ec2-task.json  ecr-task.json  env.example  simple-task.json  task-def-register.json  task-def.json  test-task.json
.github/workflows/: ci-cd.yml  deploy.yml
docs/: LOCAL_MODE_MIGRATION.md
docs/plans/: 2026-01-16-email-password-authentication-design.md  2026-01-17-local-development-mode-design.md  2026-01-17-local-development-mode.md  2026-01-18-integration-testing-design.md  2026-01-18-integration-testing.md  2026-01-20-tiktok-video-feed-design.md
infra/: app.yml  ecr.yml
public/: index.html
scripts/: README_AWS_CLI.md  aws_cleanup.sh  aws_monitoring.sh  aws_setup.sh  aws_setup_alelysee.md  cleanup_unused_vpcs.sh
tests/: README.md
tests/e2e/: Cargo.toml
tests/e2e/src/: browser.rs  lib.rs  test_server.rs
tests/e2e/tests/: auth.rs  navigation.rs
