[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "tests/e2e",
]

[workspace.dependencies]
dioxus = { version = "0.7.3" }
dioxus-fullstack = { version = "0.7.3" }
dioxus-server = { version = "0.7.3" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
